<resources>
    <string name="app_name">MVP</string>
    <string name="app_version">ver.1.0.0</string>
    <string name="normal_login">일반 군인용으로 시작</string>
    <string name="manager_login">관리자(행정병)으로 시작</string>
    <string name="today">오늘</string>
    <string name="preview_myinfo">내 정보 미리보기</string>
    <string name="point">포인트</string>
    <string name="remain_vacation">남은 휴가일</string>
    <string name="remain_day">남은 복무일</string>
    <string name="register_point">휴가 포인트 등록</string>
    <string name="start">시작</string>
    <string name="finish">종료</string>
    <string name="register">등록</string>
    <string name="per_day">해당 일자에</string>
    <string name="use_point">포인트 사용</string>
    <string name="home">홈</string>
    <string name="my_info">내 정보</string>
    <string name="setting">설정</string>
    <string name="check_breakdown">내역 확인</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="sign_up">회원가입</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">로그인</string>
</resources>